I coded the lab4 using multiton